# mpst

./: .env.example  .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
src/: __main__.py  lifespan.py
src/api/: health.py  router.py
src/config/: __init__.py  paths.py
src/config/env/: __init__.py  app.py  database.py  nats.py  otel.py  settings.py
src/core/: exceptions.py  publisher.py
src/core/telemetry/: __init__.py  instrumentation.py  logging.py  metrics.py  resource.py  telemetry.py  traces.py
src/database/: engine.py  migrations.py  uow.py
src/database/dao/: __init__.py  base.py
src/database/dao/mixins/: __init__.py  filters.py  pagination.py
src/database/models/: base.py
src/database/models/mixins/: __init__.py  soft_delete.py  timestamp.py  uuid.py
src/di/: __init__.py  container.py
src/di/providers/: __init__.py  broker.py  database.py  publisher.py  telemetry.py
src/modules/users/: __init__.py  dao.py  router.py  service.py
src/modules/users/types/: dto.py  messages.py  model.py  schemas.py
